2008-04-29  Michal Ludvig  <michal@logix.cz>

	* S3/Exceptions.py: Exceptions moved out of S3.S3
	* S3/SortedDict.py: rewritten from scratch to preserve
	  case of keys while still sorting in case-ignore mode.

2008-04-28  Michal Ludvig  <michal@logix.cz>

	* S3/S3.py: send_file() now computes MD5 sum of the file
	  being uploaded, compares with ETag returned by Amazon
	  and retries upload if they don't match.

2008-03-05  Michal Ludvig  <michal@logix.cz>

	* s3cmd, S3/S3.py, S3/Utils.py: Throttle upload speed and retry 
	  when upload failed.
	  Report download/upload speed and time elapsed.

2008-02-28  Michal Ludvig  <michal@logix.cz>

	* Released version 0.9.6
	  ----------------------

2008-02-28  Michal Ludvig  <michal@logix.cz>

	* S3/PkgInfo.py: bumped up version to 0.9.6
	* NEWS: What's new in 0.9.6

2008-02-27  Michal Ludvig  <michal@logix.cz>

	* s3cmd, s3cmd.1: Updated help and man page.
	* S3/S3.py, S3/Utils.py, s3cmd: Support for 's3cmd info' command.
	* s3cmd: Fix crash when 'sync'ing files with unresolvable owner uid/gid.
	* S3/S3.py, S3/Utils.py: open files in binary mode (otherwise windows
	  users have problems).
	* S3/S3.py: modify 'x-amz-date' format (problems reported on MacOS X). 
	  Thanks Jon Larkowski for fix.

2008-02-27  Michal Ludvig  <michal@logix.cz>

	* TODO: Updated wishlist.

2008-02-11  Michal Ludvig  <michal@logix.cz>

	* S3/S3.py: Properly follow RedirectPermanent responses for EU buckets
	* S3/S3.py: Create public buckets with -P (#1837328)
	* S3/S3.py, s3cmd: Correctly display public URL on uploads.
	* S3/S3.py, S3/Config.py: Support for MIME types. Both 
	default and guessing. Fixes bug #1872192 (Thanks Martin Herr)

2007-11-13  Michal Ludvig  <michal@logix.cz>

	* Released version 0.9.5
	  ----------------------

2007-11-13  Michal Ludvig  <michal@logix.cz>

	* S3/S3.py: Support for buckets stored in Europe, access now 
	  goes via <bucket>.s3.amazonaws.com where possible.

2007-11-12  Michal Ludvig  <michal@logix.cz>
